Both services are now integrated. The IntegrationService, under MDM, is responsible for calling the already transformed data from the DEM service

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MdmApplication",
+            "request": "launch",
+            "mainClass": "mdm.engsoft2.mdm.MdmApplication",
+            "projectName": "mdm"
+        },
+        {
+            "type": "java",
             "name": "Spring Boot-DemApplication<dem>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
