--- a/mdm/src/main/resources/application.properties
+++ b/mdm/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-# Nome da app
+#Porta
+server.port = 8081
+
+#Nome da app
 spring.application.name=mdm-service
 
 # Configuração do banco de dados H2 (em memória)
