Docker is working!

--- a/dem/src/main/resources/application.properties
+++ b/dem/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 #Porta
-server.port = 8080
+server.port=8080
 
 #Nome da app
 spring.application.name=dem-service
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.enabled=true
