--- a/mdm/src/main/resources/application.properties
+++ b/mdm/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Porta
-server.port = 8081
+server.port=8082
 
 #Nome da app
 spring.application.name=mdm-service
@@ -17,9 +17,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 
 # Mostrar SQL no console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.SQL=DEBUG
 
 # Habilita o console web do H2
 spring.h2.console.enabled=true
