--- a/dem/dockerfile
+++ b/dem/dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:latest
+FROM openjdk:24-jdk-slim
 WORKDIR /dem
 COPY ./target/dem-0.0.1-SNAPSHOT.jar .
 CMD ["java", "-jar", "dem-0.0.1-SNAPSHOT.jar"]
