Extractor completely refactored to save the extracted data in a .json file, as well as the transformed data. There's also a Metadata entity to save the metadata of the files

--- a/dem/src/main/resources/application.properties
+++ b/dem/src/main/resources/application.properties
@@ -4,5 +4,34 @@ server.port=8080
 #Nome da app
 spring.application.name=dem-service
 
+# Configuração do banco de dados H2 (em memória)
+spring.datasource.url=jdbc:h2:mem:mdmdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Cria as tabelas automaticamente (zera a base toda vez)
+spring.jpa.hibernate.ddl-auto=create
+
+# Mostrar SQL no console
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.SQL=DEBUG
+
+# Habilita o console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Inicialização com algum script SQL (opcional, comentei por enqto)
+# spring.sql.init.mode=always
+# spring.sql.init.data-locations=classpath:bd/insert.sql
+# spring.jpa.defer-datasource-initialization=true
+
+# Fuso horário padrão
+spring.jackson.time-zone=America/Sao_Paulo
+
 management.endpoints.web.exposure.include=health
 management.endpoint.health.enabled=true
