Report finished! I've also repaired the docker-compose file and updated the IntegrationService

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
       build:
         context: ./dem
         dockerfile: dockerfile
+      volumes:
+        - ./files:/dem/files
       ports:
         - 8081:8080
     
